@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.27 2002/09/04 04:12:28 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.28 2002/09/04 04:14:36 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1399,3 +1399,6 @@ sys/dev/pci/pucdata.c				1.31 via patch
 
 sys/dev/scsipi/scsiconf.c			1.186 via patch
   add quirk entry for yet another broken sony cdrom. Fix kern/17773
+
+lib/libc/stdlib/calloc.c			1.10-1.12
+  allow calloc(0, x) and calloc(x, 0).  sync w/openbsd
